--- a/resources/assets/css/main.css
+++ b/resources/assets/css/main.css
@@ -364,3 +364,17 @@ body {
 .users-chart .current-user td {
     background-color: rgba(140, 161, 220, 0.45);
 }
+
+.edit-users-table {
+
+}
+
+.edit-users-table .user-avatar-container {
+    width: 40px;
+    height: 40px;
+}
+
+.edit-users-table .user-avatar-container img {
+    max-width: 40px;
+    max-height: 40px;
+}
