--- a/resources/assets/app/views/games/index.html
+++ b/resources/assets/app/views/games/index.html
@@ -94,11 +94,11 @@
             </div>
         </div>
     </div>
-    <div class="row games-pages" ng-if="currentpage < lastpage">
-        <button class="btn btn-primary" ng-if="loading" disabled="disabled">
+    <div class="row games-pages" ng-show="gamesRepository.currentpage < gamesRepository.lastpage">
+        <button class="btn btn-primary" ng-if="gamesRepository.loading" disabled="disabled">
             <span><i class="fa fa-refresh fa-spin"></i></span> more...
         </button>
-        <button class="btn btn-primary" ng-if="loading === false" ng-click="loadMore()">
+        <button class="btn btn-primary" ng-if="gamesRepository.loading === false" ng-click="gamesRepository.load()">
             <span><i class="fa fa-refresh"></i></span> more...
         </button>
     </div>
