--- a/resources/assets/app/views/games/complainers.html
+++ b/resources/assets/app/views/games/complainers.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-8 col-md-offset-2 game-container">
+    <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12 col-centered content-wrap">
         <h2 class="text-center">Complained users</h2>
         <div ng-repeat="complaint in game.complaints" ng-if="$index % 4 == 0" class="row">
             <div class="col-md-3 complain-user-list">
